Moved node name parsing to moera-commons.